--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -39,7 +39,7 @@ global_task_template: &GLOBAL_TASK_TEMPLATE
     memory: 8G  # Set to 8GB to avoid OOM. https://cirrus-ci.org/guide/linux/#linux-containers
   ccache_cache:
     folder: "/tmp/ccache_dir"
-  depends_built_cache:
+  built_depends_cache:
     folder: "depends/built"
   ci_script:
     - ./ci/test_run_all.sh
@@ -86,29 +86,25 @@ task:
 task:
   name: 'ARM [unit tests, no functional tests] [buster]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: debian:buster
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_arm.sh"
 
 task:
   name: 'Win64 [unit tests, no gui tests, no boost::process, no functional tests] [focal]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:focal
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_win64.sh"
 
 task:
   name: '32-bit + dash [gui] [CentOS 8]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: centos:8
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
-    PACKAGE_MANAGER_INSTALL: "yum install -y"
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_i686_centos.sh"
 
 task:
@@ -136,19 +132,17 @@ task:
 task:
   name: '[depends, sanitizers: memory (MSan)] [focal]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:focal
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_native_msan.sh"
 
 task:
   name: '[no depends, sanitizers: address/leak (ASan + LSan) + undefined (UBSan) + integer] [hirsute]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:hirsute
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_native_asan.sh"
 
 task:
@@ -158,6 +152,7 @@ task:
     image: ubuntu:focal
     cpu: 4  # Increase CPU and memory to avoid timeout
     memory: 16G
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
     << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
     MAKEJOBS: "-j8"
@@ -178,20 +173,18 @@ task:
 task:
   name: '[no wallet] [bionic]'
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:bionic
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_native_nowallet.sh"
 
 task:
   name: 'macOS 10.14 [gui, no tests] [focal]'
   << : *DEPENDS_SDK_CACHE_TEMPLATE
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:focal
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_mac.sh"
 
 task:
@@ -214,8 +207,7 @@ task:
   depends_sources_cache:
     folder: "depends/sources"
   << : *GLOBAL_TASK_TEMPLATE
-  container:
-    image: ubuntu:focal
+  << : *PERSISTENT_WORKER_TEMPLATE
   env:
-    << : *CIRRUS_EPHEMERAL_WORKER_TEMPLATE_ENV
+    << : *PERSISTENT_WORKER_TEMPLATE_ENV
     FILE_ENV: "./ci/test/00_setup_env_android.sh"
