net: Drop invalid subnets when deserializing banlist.dat
This should not happen in normal operation, but keeping invalid subnets
does not add any value. Thus, drop them.

This also fixes a fuzzing issue found by OSS-Fuzz:
https://bugs.chromium.org/p/oss-fuzz/issues/detail?id=35561

--- a/src/Makefile.test.include
+++ b/src/Makefile.test.include
@@ -68,6 +68,7 @@ BITCOIN_TESTS =\
   test/addrman_tests.cpp \
   test/amount_tests.cpp \
   test/allocator_tests.cpp \
+  test/banman_tests.cpp \
   test/base32_tests.cpp \
   test/base58_tests.cpp \
   test/base64_tests.cpp \
